Dealt with edge cases like gibberish/whitespaces etc as response. Fixed ranking ladder's numeric scores, ensuring it's all numeric. Confirmed the requirements.txt to work.

--- a/static/css/analysis.css
+++ b/static/css/analysis.css
@@ -176,7 +176,7 @@ h2 {
 .clipboard {
     height: 100%;
     width: 100%;
-    min-height:300px;
+    min-height:275px;
     min-width:350px;
     max-height:500px;
     max-width:500px;
